--- a/src/Game.css
+++ b/src/Game.css
@@ -3,6 +3,10 @@ body {
   margin: 20px;
 }
 
+ol, ul {
+  padding-left: 30px;
+}
+
 .board-row {
   margin-left: 0px;
 }
@@ -43,4 +47,7 @@ body {
 .game {
   display: flex;
   flex-direction: row;
+}
+.game-info {
+  margin-left: 20px;
 }
